# typing-teacher

./: LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
docs/: Untitled Diagram.drawio  requirments.md
src/: frontend.py  graphics.py  lesson.py  main.py  test.py
unit_tests/: test_lesson.py
