[tool.poetry]
name = "typing-teacher"
version = "0.1.0"
description = "This is a personal project to build a program to help me learn to type on a new keyboard and layout."
authors = ["tpcm <peadermartin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
